Added language builder

--- a/src/LLParser.ConsoleApp/LLParser.ConsoleApp.csproj
+++ b/src/LLParser.ConsoleApp/LLParser.ConsoleApp.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GetInput.cs" />
+    <Compile Include="GetLanguage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
