Added ll(1) ability

--- a/src/LLParser/LLParser.csproj
+++ b/src/LLParser/LLParser.csproj
@@ -41,9 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\GrammarModel.cs" />
-    <Compile Include="Models\LanguageModel.cs" />
+    <Compile Include="GrammarRules.cs" />
+    <Compile Include="Language.cs" />
+    <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CollectionExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
